data/derived/sp14/progs/unify/prog4360.ml.out
Characters 269-293:
  else if (rand mod 5) = 2 then buildAverage(build(rand, depth - 1))
                                            ^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
